# site

./: .env.example  .gitignore  .prettierrc  Cargo.toml  VERSION  package.json  tsconfig.json  webpack.config.js
.github/workflows/: deploy.yml
config/: deploy.sh  g00je.site.service  nginx.conf
src/: config.rs  main.rs  sitemap.rs  utils.rs  web.rs
src/models/: common.rs  error.rs  mod.rs
static/: manifest.json
static/font/: imports.css
static/public/: offline.html  sw.js  swx.js
templates/: 404.html  base.html  blog.html  blogs.html  home.html
templates/blogs/: index.html
templates/home/: index.html
templates/layout/: footer.html  navbar.html
web/script/: base.ts  blog.ts  blogs.ts  home.ts  nav.ts
web/style/: base.scss  theme.scss
web/style/layout/: footer.scss  navbar.scss
web/style/pages/: 404.scss  blog.scss  blogs.scss  home.scss
web/style/pages/home/: home.scss
