[package]
name = "gooje"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
actix-web = "4.9.0"
cercis = "1.2.0"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
awc = { version = "3.5.1", features = ["openssl"] }
actix-http = "3.9.0"
actix-files = "0.6.6"
chrono = { version = "0.4.38", features = ["serde"] }
minijinja = { version = "2.3.1", features = ["loader"] }
